--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <!-- <a href="https://github.com/akali" class="btn btn-github"><span class="icon"></span>View on GitHub</a> -->
         </section>
       </div>
+    <a href="Birthday/index.html" class="btn btn-github">Birthday</a>
     <a href="HelloWorld/index.html" class="btn btn-github">Hello World</a>
     <a href="NewSite/index.html" class="btn btn-github">New Site</a>
     </header>
