--- a/mc/index.html
+++ b/mc/index.html
@@ -53,6 +53,16 @@
 				<td>-</td>
 				<td>-</td>
 			</tr>
+			<tr>
+				<td>Yaroslav</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+			</tr>
 		</tbody>
 	</table>
 </body>
