--- a/mc/index.html
+++ b/mc/index.html
@@ -34,17 +34,17 @@
 				<td>-</td>
 			</tr>
 			<tr>
-				<td>Rifat</td>
+				<td><a href="https://acmp.ru/index.asp?main=user&id=170218">Rifat</a></td>
+				<td>+</td>
 				<td>-</td>
 				<td>-</td>
 				<td>-</td>
-				<td>-</td>
-				<td>-</td>
+				<td>+</td>
 				<td>-</td>
 				<td>-</td>
 			</tr>
 			<tr>
-				<td>Vahit</td>
+				<td><a href="http://www.acmp.ru/index.asp?main=user&id=168755">Vahit</a></td>
 				<td>-</td>
 				<td>-</td>
 				<td>-</td>
