--- a/mc/index.html
+++ b/mc/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>16.12.2016 M&C Rating</title>
 	<style>
 	table, th, td {
@@ -14,13 +15,13 @@
 	<table style="width=100%">
 		<tr>
 			<th>Name</th>
-			<th>Problem 1</th>
-			<th>Problem 2</th>
-			<th>Problem 3</th>
-			<th>Problem 4</th>
-			<th>Problem 5</th>
-			<th>Problem 6</th>
-			<th>Problem 7</th>
+			<th><a href="http://acmp.ru/index.asp?main=task&id_task=128">Один конь</a></th>
+			<th><a href="http://acmp.ru/index.asp?main=task&id_task=338">Лоскутки</a></th>
+			<th><a href="http://acmp.ru/index.asp?main=task&id_task=381">Lines</a></th>
+			<th><a href="http://acmp.ru/index.asp?main=task&id_task=426">Lines - 2</a></th>
+			<th><a href="http://acmp.ru/index.asp?main=task&id_task=127">Путь</a></th>
+			<th><a href="http://acmp.ru/index.asp?main=task&id_task=151">Банкет</a></th>
+			<th><a href="http://acmp.ru/index.asp?main=task&id_task=150">Друзья</a></th>
 		</tr>
 		<tbody>
 			<tr>
