--- a/mc/index.html
+++ b/mc/index.html
@@ -22,30 +22,33 @@
 			<th><a href="http://acmp.ru/index.asp?main=task&id_task=127">Путь</a></th>
 			<th><a href="http://acmp.ru/index.asp?main=task&id_task=151">Банкет</a></th>
 			<th><a href="http://acmp.ru/index.asp?main=task&id_task=150">Друзья</a></th>
+			<th>Total</th>
 		</tr>
 		<tbody>
 			<tr>
-				<td><a href="https://acmp.ru/index.asp?main=user&id=170218">Rifat</a></td>
+				<td><a href="http://acmp.ru/?main=user&id=146921">Omar</a></td>
+				<td>+</td>
+				<td>+</td>
+				<td>+</td>
+				<td>+</td>
 				<td>+</td>
 				<td>-</td>
 				<td>+</td>
-				<td>+</td>
-				<td>+</td>
-				<td>-</td>
-				<td>-</td>
+				<td>6</td>
 			</tr>
 			<tr>
-				<td>Omar</td>
+				<td><a href="https://acmp.ru/?main=user&id=170218">Rifat</a></td>
 				<td>+</td>
 				<td>-</td>
 				<td>+</td>
-				<td>-</td>
+				<td>+</td>
 				<td>+</td>
 				<td>-</td>
 				<td>-</td>
+				<td>4</td>
 			</tr>
 			<tr>
-				<td><a href="http://www.acmp.ru/index.asp?main=user&id=168755">Vahit</a></td>
+				<td><a href="http://www.acmp.ru/?main=user&id=168755">Vahit</a></td>
 				<td>-</td>
 				<td>-</td>
 				<td>-</td>
@@ -53,6 +56,7 @@
 				<td>-</td>
 				<td>-</td>
 				<td>-</td>
+				<td>0</td>
 			</tr>
 			<tr>
 				<td>Yaroslav</td>
@@ -63,6 +67,7 @@
 				<td>-</td>
 				<td>-</td>
 				<td>-</td>
+				<td>0</td>
 			</tr>
 		</tbody>
 	</table>
