add new section

--- a/mc/index.html
+++ b/mc/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 	<h1>ACMP rating</h1>
+	<h2>BFS</h2>
 	<table style="width=100%">
 		<tr>
 			<th>Name</th>
@@ -59,7 +60,7 @@
 				<td>0</td>
 			</tr>
 			<tr>
-				<td>Yaroslav</td>
+				<td><a href="http://www.acmp.ru/?main=user&id=154915">Yaroslav</a></td>
 				<td>-</td>
 				<td>-</td>
 				<td>-</td>
@@ -71,5 +72,70 @@
 			</tr>
 		</tbody>
 	</table>
-</body>
+	<br>
+	<h2>Djikstra, Floyd, Ford-Bellman</h2>
+	<table style="width=100%">
+		<tr>
+			<th>Name</th>
+			<th><a href="http://acmp.ru/index.asp?main=task&id_task=135">Алгоритм Флойда</a></th>
+			<th><a href="http://acmp.ru/index.asp?main=task&id_task=136">Алгоритм Флойда - 2</a></th>
+			<th><a href="http://acmp.ru/index.asp?main=task&id_task=138">Алгоритм Форда-Беллмана</a></th>
+			<th><a href="http://acmp.ru/index.asp?main=task&id_task=140">Цикл отрицательного веса</a></th>
+			<th><a href="http://acmp.ru/index.asp?main=task&id_task=132">Алгоритм Дейкстры</a></th>
+			<th><a href="http://acmp.ru/index.asp?main=task&id_task=133">Заправки</a></th>
+			<th><a href="http://acmp.ru/index.asp?main=task&id_task=134">Автобусы</a></th>
+			<th><a href="http://acmp.ru/index.asp?main=task&id_task=332">Минимальная стоимость проезда</a></th>
+			<th>Total</th>
+		</tr>
+		<tbody>
+			<tr>
+				<td><a href="http://acmp.ru/?main=user&id=146921">Omar</a></td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>0</td>
+			</tr>
+			<tr>
+				<td><a href="https://acmp.ru/?main=user&id=170218">Rifat</a></td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>0</td>
+			</tr>
+			<tr>
+				<td><a href="http://www.acmp.ru/?main=user&id=168755">Vahit</a></td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>0</td>
+			</tr>
+			<tr>
+				<td><a href="http://www.acmp.ru/?main=user&id=154915">Yaroslav</a></td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>-</td>
+				<td>0</td>
+			</tr>
+		</tbody>
+	</table></body>
 </html>
