--- a/mc/index.html
+++ b/mc/index.html
@@ -13,6 +13,9 @@
 <body>
 	<h1>ACMP rating</h1>
 	<h2>BFS</h2>
+	
+	<a href="codes/index.html"> Link to codes </a> <br> <br>
+	
 	<table style="width=100%">
 		<tr>
 			<th>Name</th>
