--- a/mc/list.html
+++ b/mc/list.html
@@ -1,8 +1,8 @@
 ACMP 15.03.17
 
-[378, 544, 518, 179, 391]
-Omar     [+----]
-Rifat    [-----]
-Hellomik [-----]
-Vahit    [-----]
-
+[378, 544, 518, 179, 391] <br>
+Omar     [+----]<br>
+Rifat    [-----]<br>
+Hellomik [-----]<br>
+Vahit    [-----]<br>
+<br>
