add md && change list.html

--- a/mc/list.html
+++ b/mc/list.html
@@ -1,8 +1,10 @@
-ACMP 15.03.17
+<!DOCTYPE html>
+<html><head><meta charset="utf-8"><title>ACMP rating M&C</title><style></style></head><body id="preview">
+<h1><a id="ACMP_150317_0"></a>ACMP 15.03.17</h1>
+<p>[<a href="http://acmp.ru/index.asp?main=task&amp;id_task=378">378</a>, <a href="http://acmp.ru/index.asp?main=task&amp;id_task=544">544</a>, <a href="http://acmp.ru/index.asp?main=task&amp;id_task=518">518</a>, <a href="http://acmp.ru/index.asp?main=task&amp;id_task=179">179</a>, <a href="http://acmp.ru/index.asp?main=task&amp;id_task=391">391</a>]</p>
+<h2><a id="Omar__________2"></a>Omar     [+ - - - -]</h2>
+<h2><a id="Rifat_________3"></a>Rifat    [- - - - -]</h2>
+<h2><a id="Hellomik______4"></a>Hellomik [- - - - -]</h2>
+<h2><a id="Vahit_________5"></a>Vahit    [- - - - -]</h2>
 
-[378, 544, 518, 179, 391] <br>
-Omar     [+----]<br>
-Rifat    [-----]<br>
-Hellomik [-----]<br>
-Vahit    [-----]<br>
-<br>
+</body></html>
