add new section | add +

--- a/mc/list1/list.html
+++ b/mc/list1/list.html
@@ -2,8 +2,8 @@
 <h1><a id="ACMP_150317_0"></a>ACMP 15.03.17</h1>
 <p>[<a href="http://acmp.ru/index.asp?main=task&amp;id_task=378">378</a>, <a href="http://acmp.ru/index.asp?main=task&amp;id_task=544">544</a>, <a href="http://acmp.ru/index.asp?main=task&amp;id_task=518">518</a>, <a href="http://acmp.ru/index.asp?main=task&amp;id_task=179">179</a>, <a href="http://acmp.ru/index.asp?main=task&amp;id_task=391">391</a>]</p>
 <h2><a id="Omarhttpacmpruindexaspmainuserid146921______2"></a><a href="http://acmp.ru/index.asp?main=user&amp;id=146921">Omar</a> [- + + - +]</h2>
-<h2><a id="Vahithttpwwwacmprumainuserid168755______3"></a><a href="http://www.acmp.ru/?main=user&amp;id=168755">Vahit</a> [- + - - +]</h2>
-<h2><a id="Hellomikhttpacmpruindexaspmainuserid188606______4"></a><a href="http://acmp.ru/index.asp?main=user&amp;id=188606">Hellomik</a> [+ + - - -]</h2>
-<h2><a id="Rifathttpsacmprumainuserid170218______5"></a><a href="https://acmp.ru/?main=user&amp;id=170218">Rifat</a> [- - - - +]</h2>
+<h2><a id="Rifathttpsacmprumainuserid170218______3"></a><a href="https://acmp.ru/?main=user&amp;id=170218">Rifat</a> [+ + - - +]</h2>
+<h2><a id="Hellomikhttpacmpruindexaspmainuserid188606______4"></a><a href="http://acmp.ru/index.asp?main=user&amp;id=188606">Hellomik</a> [+ + + - -]</h2>
+<h2><a id="Vahithttpwwwacmprumainuserid168755______5"></a><a href="http://www.acmp.ru/?main=user&amp;id=168755">Vahit</a> [- + - + +]</h2>
 
 </body></html>
