--- a/mc/list2/list.html
+++ b/mc/list2/list.html
@@ -2,7 +2,7 @@
 <h1><a id="ACMP_180317_0"></a>ACMP 18.03.17</h1>
 <p>[<a href="http://acmp.ru/index.asp?main=task&amp;id_task=325">325</a>, <a href="http://acmp.ru/index.asp?main=task&amp;id_task=49">49</a>, <a href="http://acmp.ru/index.asp?main=task&amp;id_task=322">322</a>, <a href="http://acmp.ru/index.asp?main=task&amp;id_task=361">361</a>, <a href="http://acmp.ru/index.asp?main=task&amp;id_task=600">600</a>]</p>
 <h2><a id="Hellomikhttpacmpruindexaspmainuserid188606______4"></a><a href="http://acmp.ru/index.asp?main=user&amp;id=188606">Hellomik</a> [+ - - - -]</h2>
-<h2><a id="Omarhttpacmpruindexaspmainuserid146921______2"></a><a href="http://acmp.ru/index.asp?main=user&amp;id=146921">Omar</a> [- - - - -]</h2>
+<h2><a id="Omarhttpacmpruindexaspmainuserid146921______2"></a><a href="http://acmp.ru/index.asp?main=user&amp;id=146921">Omar</a> [+ - - - -]</h2>
 <h2><a id="Rifathttpsacmprumainuserid170218______3"></a><a href="https://acmp.ru/?main=user&amp;id=170218">Rifat</a> [- - - - -]</h2>
 <h2><a id="Vahithttpwwwacmprumainuserid168755______5"></a><a href="http://www.acmp.ru/?main=user&amp;id=168755">Vahit</a> [- - - - -]</h2>
 
