--- a/mc/list2/list.html
+++ b/mc/list2/list.html
@@ -16,6 +16,6 @@ table, th, td {border: 1px solid black;border-collapse: collapse;}</style>
 МАКСЮТОВ РИФАТ РИМОВИЧ</td><td>+</td><td>-</td><td>-</td><td>-</td><td>-
 </td></tr>
 <tr><td>
-ФАЗКУЛЛИН ВАХИТ ШАФХАТОВИЧ</td><td>-</td><td>-</td><td>-</td><td>-</td><td>-
+ФАЗКУЛЛИН ВАХИТ ШАФХАТОВИЧ</td><td>+</td><td>-</td><td>-</td><td>-</td><td>-
 </td></tr>
 </table>
