--- a/mc/list.html
+++ b/mc/list.html
@@ -7,5 +7,6 @@
 	<h1>Hello, world!</h1>
 	<a href="list1/list.html">List1</a> <br>
 	<a href="list2/list.html">List2</a> <br>
+	<a href="list3/list.html">List3</a> <br>
 </body>
 </html>
