--- a/mc/list3/list.html
+++ b/mc/list3/list.html
@@ -1,2 +1,9 @@
-http://acmp.ru/index.asp?main=task&id_task=377
-http://acmp.ru/index.asp?main=task&id_task=467
+<meta charset="utf-8">
+<style>
+table, th, td {border: 1px solid black;border-collapse: collapse;}</style>
+<br>
+<table>
+<tr><td>
+<a href="http://acmp.ru/index.asp?main=task&id_task=377">Закраска прямой</a></td><td><a href="http://acmp.ru/index.asp?main=task&id_task=467">Закраска прямой - 2</a>
+</td></tr>
+</table>
