--- a/mc/list3/list.html
+++ b/mc/list3/list.html
@@ -6,4 +6,10 @@ table, th, td {border: 1px solid black;border-collapse: collapse;}</style>
 <tr><td>
 <a href="http://acmp.ru/index.asp?main=task&id_task=377">Закраска прямой</a></td><td><a href="http://acmp.ru/index.asp?main=task&id_task=467">Закраска прямой - 2</a>
 </td></tr>
+<tr><td>
+<a href="http://informatics.mccme.ru/mod/statements/view.php?id=4252">Задачи на scanline</a>
+</td></tr>
+<tr><td>
+
+</td></tr>
 </table>
