--- a/mc/list3/list.html
+++ b/mc/list3/list.html
@@ -1,7 +1,4 @@
 <meta charset="utf-8">
-<style>
-table, th, td {border: 1px solid black;border-collapse: collapse;}</style>
-<br>
 <table>
 <tr><td>
 <a href="http://acmp.ru/index.asp?main=task&id_task=377">Закраска прямой</a></td><td><a href="http://acmp.ru/index.asp?main=task&id_task=467">Закраска прямой - 2</a>
@@ -10,6 +7,9 @@ table, th, td {border: 1px solid black;border-collapse: collapse;}</style>
 <a href="http://informatics.mccme.ru/mod/statements/view.php?id=4252">Задачи на scanline</a>
 </td></tr>
 <tr><td>
-
+Interesting problem on coordinates zipping: </td><td><a href="http://acmp.ru/index.asp?main=task&id_task=632">Отрезки</a>
+</td></tr>
+<tr><td>
+<a href="informatics.mccme.ru/py-source/source/dir/240-430?cnt=100">Mega Big Archive</a>
 </td></tr>
 </table>
