--- a/mc/list3/list.html
+++ b/mc/list3/list.html
@@ -10,6 +10,6 @@
 Interesting problem on coordinates zipping: </td><td><a href="http://acmp.ru/index.asp?main=task&id_task=632">Отрезки</a>
 </td></tr>
 <tr><td>
-<a href="informatics.mccme.ru/py-source/source/dir/240-430?cnt=100">Mega Big Archive</a>
+<a href="http://informatics.mccme.ru/py-source/source/dir/240-430?cnt=100">Mega Big Archive</a>
 </td></tr>
 </table>
