--- a/mc/codes/index.html
+++ b/mc/codes/index.html
@@ -1,2 +1,3 @@
 <a href = "priority_queue.html"> Priority queue example</a> <br>
 <a href = "set.html"> Set example</a> <br>
+<a href = "unique.html"> Unique example</a> <br>
