--- a/web-dev-course/facebook/index.html
+++ b/web-dev-course/facebook/index.html
@@ -33,53 +33,117 @@
 			</div>
 		</header>
 		<div class="grad">
-		<div class="main">
-			<div class="left">
-				<div class="wrap">
-					Facebook помогает вам всегда оставаться на связи и общаться со своими знакомыми.
+			<div class="main">
+				<div class="left">
+					<div class="wrap">
+						Facebook помогает вам всегда оставаться на связи и общаться со своими знакомыми.
+					</div>
+					<div class="people"></div>
 				</div>
-				<div class="people"></div>
-			</div>
-			<div class="right">
-				<div class="texting">
-					<h1>Регистрация</h1>
-					<p>Это бесплатно и всегда будет бесплатнo.</p>
+				<div class="right">
+					<div class="texting">
+						<h1>Регистрация</h1>
+						<p>Это бесплатно и всегда будет бесплатнo.</p>
+					</div>
+					<form action="#">
+						<div class="fields">
+							<div class="row1">
+								<input class="name" type="text" placeholder="Имя">
+								<input type="text" placeholder="Фамилия">
+							</div>
+							<div class="row23">
+								<input type="text" placeholder="Номер мобильного телефона или эл. адрес">
+							</div>
+							<div class="row23">
+								<input type="password" placeholder="Новый пароль">
+							</div>
+						</div>
+						<p class="bday">Дата рождения</p>
+						<div class="date"></div>
+						<div class="sex" data-type="radio">
+							<div>
+								<input name="gender" id="female" type="radio">
+								<label for="female">Женщина</label>
+							</div>
+							<div>
+								<input name="gender" id="male" type="radio">
+								<label for="male">Мужчина</label>
+							</div>
+						</div>
+						<div class="details-wrap">
+							<p class="details">
+								Нажимая «Создать аккаунт», вы соглашаетесь с нашими Условиями использования и подтверждаете, что ознакомились с нашей Политикой использования данных, включая применение файлов «cookie». Вы можете получать SMS-уведомления от Facebook, от которых можете отказаться в любой момент.
+							</p>
+						</div>
+						<input type="submit" class="create-account-button" value="Создать аккаунт">
+					</form>
+					<div class="create-another-account">Создать Страницу знаменитости, музыкальной группы или компании.</div>
 				</div>
-				<form action="#">
-					<div class="fields">
-						<div class="row1">
-							<input class="name" type="text" placeholder="Имя">
-							<input type="text" placeholder="Фамилия">
-						</div>
-						<div class="row23">
-							<input type="text" placeholder="Номер мобильного телефона или эл. адрес">
-						</div>
-						<div class="row23">
-							<input type="password" placeholder="New password">
-						</div>
-					</div>
-					<p class="bday">Дата рождения</p>
-					<div class="date"></div>
-					<div class="sex" data-type="radio">
-						<div>
-							<input name="gender" id="female" type="radio">
-							<label for="female">Женщина</label>
-						</div>
-						<div>
-							<input name="gender" id="male" type="radio">
-							<label for="male">Мужчина</label>
-						</div>
-					</div>
-					<div class="details-wrap">
-						<p class="details">
-							Нажимая «Создать аккаунт», вы соглашаетесь с нашими Условиями использования и подтверждаете, что ознакомились с нашей Политикой использования данных, включая применение файлов «cookie». Вы можете получать SMS-уведомления от Facebook, от которых можете отказаться в любой момент.
-						</p>
-					</div>
-					<input type="submit" class="create-account-button" value="Создать аккаунт">
-				</form>
-				<div class="create-another-account">Создать Страницу знаменитости, музыкальной группы или компании.</div>
 			</div>
 		</div>
+		<div class="bottom">
+			<table class="langs">
+				<tbody>
+					<tr>
+						<td><a href="#">Русский</a></td>
+						<td><a href="#">English (US)</a></td>
+						<td><a href="#">Türkçe</a></td>
+						<td><a href="#">Bahasa</a></td>
+						<td><a href="#">Indonesia</a></td>
+						<td><a href="#">中文(简体)</a></td>
+						<td><a href="#">Қазақша</a></td>
+						<td><a href="#">Deutsch</a></td>
+						<td><a href="#">한국어</a></td>
+						<td><a href="#">Shqip</a></td>
+						<td><a href="#">Español</a></td>
+						<td><a href="#">Português (Brasil)</a></td>
+					</tr>
+				</tbody>
+			</table>
+			<hr>
+			<div class="bottom-stuff">
+				<table>
+					<tbody>
+						<tr>
+							<td class="stuff-item">Регистрация</td>
+							<td class="stuff-item">Вход</td>
+							<td class="stuff-item">Messenger</td>
+							<td class="stuff-item">Facebook Lite</td>
+							<td class="stuff-item">Моб. устройства</td>
+							<td class="stuff-item">Найти друзей</td>
+							<td class="stuff-item">Люди</td>
+							<td class="stuff-item">Страницы</td>
+							<td class="stuff-item">Места</td>
+							<td class="stuff-item">Игры</td>
+							<td class="stuff-item">Местонахождения</td>
+						</tr>
+						<tr>
+							<td class="stuff-item">Знаменитости</td>
+							<td class="stuff-item">Marketplace</td>
+							<td class="stuff-item">Группы</td>
+							<td class="stuff-item">Рецепты</td>
+							<td class="stuff-item">Спорт</td>
+							<td class="stuff-item">Moments</td>
+							<td class="stuff-item">Instagram</td>
+							<td class="stuff-item">О нас</td>
+							<td class="stuff-item">Создать рекламу</td>
+							<td class="stuff-item">Создать Страницу</td>
+							<td class="stuff-item">Разработчикам</td>
+						</tr>
+						<tr>
+							<td class="stuff-item">Вакансии</td>
+							<td class="stuff-item">Конфиденциальность</td>
+							<td class="stuff-item">Файлы «cookie»</td>
+							<td class="stuff-item">Выбор рекламы</td>
+							<td class="stuff-item">Условия использования</td>
+							<td class="stuff-item">Помощь</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			<div class="facebook">
+				Facebook © 2017
+			</div>
 		</div>
 	</div>
 </body>
