--- a/web-dev-course/04.10.17/index.html
+++ b/web-dev-course/04.10.17/index.html
@@ -33,7 +33,7 @@
 						Login and Register
 					</div>
 				</div>
-				<div class="bottom-line">
+				<div class="bottom-line bottom-invisible">
 					<div class="title-text">
 						Points
 					</div>
