--- a/test/index.html
+++ b/test/index.html
@@ -1,226 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Test</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+    <title>Testing</title>
+    <script src="app.js"></script>
 </head>
 <body>
-	<h4>Тест</h4><br/>
-Во всех вопросах правильный ответ только один.<br/>
-<br/>
-<h5>Вопрос 1</h5><br/>
-Имеется следующий код:<br/>
-<code>public class Overload{<br/>
-&nbsp;&nbsp;public void method(Object o) {<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;System.out.println(&quot;Object&quot;);<br/>
-&nbsp;&nbsp;}<br/>
-&nbsp;&nbsp;public void method(java.io.FileNotFoundException f) {<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;System.out.println(&quot;FileNotFoundException&quot;);<br/>
-&nbsp;&nbsp;}<br/>
-&nbsp;&nbsp;public void method(java.io.IOException i) {<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;System.out.println(&quot;IOException&quot;);<br/>
-&nbsp;&nbsp;}<br/>
-&nbsp;&nbsp;public static void main(String args[]) {<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;Overload test = new Overload();<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;test.method(null);<br/>
-&nbsp;&nbsp;}<br/>
-}<br/>
-</code><br/>
-Результатом его компиляции и выполнения будет:<br/>
-<ol>
-<li>Ошибка компиляции</li>
-<li>Ошибка времени выполнения</li>
-<li>«Object»</li>
-<li>«FileNotFoundException»</li>
-<li>«IOException»</li>
-</ol><br/>
-<h5>Вопрос 2</h5><br/>
-<code>Float f1 = new Float(Float.NaN);<br/>
-Float f2 = new Float(Float.NaN);<br/>
-System.out.println( &quot;&quot;+ (f1 == f2)+&quot; &quot;+f1.equals(f2)+ &quot; &quot;+(Float.NaN == Float.NaN) );<br/>
-</code><br/>
-Что будет выведено в результате выполнения данного куска кода:<br/>
-<ol>
-<li>false false false</li>
-<li>false true false</li>
-<li>true true false</li>
-<li>false true true</li>
-<li>true true true</li>
-</ol><br/>
-<h5>Вопрос 3</h5><br/>
-<code>class Mountain {<br/>
-&nbsp;&nbsp;static String name = &quot;Himalaya&quot;;<br/>
-&nbsp;&nbsp;static Mountain getMountain() {<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;System.out.println(&quot;Getting Name &quot;);<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;return null;<br/>
-&nbsp;&nbsp;}<br/>
-&nbsp;&nbsp;public static void main(String[ ] args) {<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;System.out.println( getMountain().name );<br/>
-&nbsp;&nbsp;}<br/>
-}<br/>
-</code><br/>
-Что произойдет при попытке выполнения данного кода:<br/>
-<ol>
-<li>Будет выведено «Himalaya» но НЕ будет выведено «Getting Name „</li>
-<li>Будет выведено “Getting Name » и «Himalaya»</li>
-<li>Ничего не будет выведено</li>
-<li>Будет выброшен NullPointerException</li>
-<li>Будет выведено «Getting Name », а потом выброшено NullPointerException</li>
-</ol><br/>
-<h5>Вопрос 4</h5><br/>
-<code>Integer a = 120;<br/>
-Integer b = 120;<br/>
-Integer c = 130;<br/>
-Integer d = 130;<br/>
-System.out.println(a==b);<br/>
-System.out.println(c==d);<br/>
-</code><br/>
-В результате выполнения данного кода будет выведено:<br/>
-<ol>
-<li>true true</li>
-<li>false false</li>
-<li>false true</li>
-<li>true false</li>
-<li>произойдет ошибка времени выполнения</li>
-</ol><br/>
-<h5>Вопрос 5</h5><br/>
-Прошлый вопрос уже когда-то поднимался на хабре, поэтому этот вопрос для тех, кому был не интересен предыдущий:<br/>
-<code>//In File Other.java<br/>
-package other;<br/>
-public class Other { public static String hello = &quot;Hello&quot;; }<br/>
-<br/>
-//In File Test.java<br/>
-package testPackage;<br/>
-import other.*;<br/>
-class Test{<br/>
-&nbsp;&nbsp;public static void main(String[] args) {<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;String hello = &quot;Hello&quot;, lo = &quot;lo&quot;;<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;System.out.print((testPackage.Other.hello == hello) + &quot; &quot;);<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;System.out.print((other.Other.hello == hello) + &quot; &quot;);<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;System.out.print((hello == (&quot;Hel&quot;+&quot;lo&quot;)) + &quot; &quot;);<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;System.out.print((hello == (&quot;Hel&quot;+lo)) + &quot; &quot;);<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;System.out.println(hello == (&quot;Hel&quot;+lo).intern());<br/>
-&nbsp;&nbsp;}<br/>
-}<br/>
-class Other { static String hello = &quot;Hello&quot;; }<br/>
-</code><br/>
-В результате мы получим:<br/>
-<ol>
-<li>false true true false true</li>
-<li>false false true false true</li>
-<li>true true true true true</li>
-<li>true true true false true</li>
-<li>Все ответы неверны</li>
-</ol><br/>
-<h5>Вопрос 6</h5><br/>
-Дана сигнатура метода:<br/>
-<code>public static &lt;E extends CharSequence&gt; List&lt;? super E&gt; doIt(List&lt;E&gt; nums) </code><br/>
-Который вызывается как-то так:<br/>
-<code>result = doIt(in);<br/>
-</code><br/>
-Какого типа должны быть result и in?<br/>
-<ol>
-<li>ArrayList&lt;String&gt; in; List&lt;CharSequence&gt; result;</li>
-<li>List&lt;String&gt; in; List&lt;Object&gt; result;</li>
-<li>ArrayList&lt;String&gt; in; List result;</li>
-<li>List&lt;CharSequence&gt; in; List&lt;CharSequence&gt; result;</li>
-<li>ArrayList&lt;Object&gt; in; List&lt;CharSequence&gt; result;</li>
-</ol><br/>
-<h5>Вопрос 7</h5><br/>
-<code>public static void doIt(String String) { //1<br/>
-&nbsp;&nbsp;int i = 10;<br/>
-&nbsp;&nbsp;i : for (int k = 0 ; k&lt; 10; k++) { //2<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;System.out.println( String + i); //3<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;if( k*k &gt; 10) continue i; //4 <br/>
-&nbsp;&nbsp;}<br/>
-}<br/>
-</code><br/>
-Данный код:<br/>
-<ol>
-<li>Не скомпилируется из-за строки 1</li>
-<li>Не скомпилируется из-за строки 2</li>
-<li>Не скомпилируется из-за строки 3</li>
-<li>Не скомпилируется из-за строки 4</li>
-<li>Скомпилируется и запустится без проблем</li>
-</ol><br/>
-<h5>Вопрос 8</h5><br/>
-<code>public class Main {<br/>
-&nbsp;&nbsp;static void method(int... a) {<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;System.out.println(&quot;inside int...&quot;);<br/>
-&nbsp;&nbsp;}<br/>
-&nbsp;&nbsp;static void method(long a, long b) {<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;System.out.println(&quot;inside long&quot;);<br/>
-&nbsp;&nbsp;}<br/>
-&nbsp;&nbsp;static void method(Integer a, Integer b) {<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;System.out.println(&quot;inside INTEGER&quot;);<br/>
-&nbsp;&nbsp;} <br/>
-&nbsp;&nbsp;public static void main(String[] args) {<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;int a = 2;<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;int b = 3;<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;method(a,b);<br/>
-&nbsp;&nbsp;}<br/>
-}<br/>
-</code><br/>
-В результате мы получим:<br/>
-<ol>
-<li>Ошибку компиляции</li>
-<li>Ошибку времени выполнения</li>
-<li>«inside int...»</li>
-<li>«inside long»</li>
-<li>«inside INTEGER»</li>
-</ol><br/>
-<h5>Вопрос 9</h5><br/>
-<code>class Super { static String ID = &quot;QBANK&quot;; }<br/>
-class Sub extends Super{<br/>
-&nbsp;&nbsp;static { System.out.print(&quot;In Sub&quot;); }<br/>
-}<br/>
-class Test{<br/>
-&nbsp;&nbsp;public static void main(String[] args) {<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;System.out.println(Sub.ID);<br/>
-&nbsp;&nbsp;}<br/>
-}<br/>
-</code><br/>
-В результате выполнения данного кода:<br/>
-<ol>
-<li>Он даже не скомпилируется</li>
-<li>Результат зависит от реализации JVM</li>
-<li>Будет выведено «QBANK»</li>
-<li>Будет выведено «In Sub» и «QBANK»</li>
-<li>Все ответы неверны</li>
-</ol><br/>
-<h5>Вопрос 10</h5><br/>
-Имеется два класса:<br/>
-<code>//in file A.java<br/>
-package p1;<br/>
-public class A{<br/>
-&nbsp;&nbsp;protected int i = 10;<br/>
-&nbsp;&nbsp;public int getI() { return i; }<br/>
-}<br/>
-<br/>
-//in file B.java<br/>
-package p2;<br/>
-import p1.*;<br/>
-public class B extends A{<br/>
-&nbsp;&nbsp;public void process(A a) {<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;a.i = a.i*2;<br/>
-&nbsp;&nbsp;}<br/>
-&nbsp;&nbsp;public static void main(String[] args) {<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;A a = new B();<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;B b = new B();<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;b.process(a);<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;System.out.println( a.getI() );<br/>
-&nbsp;&nbsp;}<br/>
-}<br/>
-</code><br/>
-В результате выполнения класса В мы получим:<br/>
-<ol>
-<li>Будет выведено «20»</li>
-<li>Будет выведено «10»</li>
-<li>Код не скомпилирутся</li>
-<li>Возникнет ошибка времени выполнения</li>
-<li>Все ответы неверны</li>
-</ol><br/>
-<br/>
-
+    <div class="root"></div>
 </body>
 </html>
