--- a/mc/camp/index.html
+++ b/mc/camp/index.html
@@ -10,7 +10,7 @@
 		<ul>
 			<li><a href="https://vjudge.net/contest/239361">Day 1: Simple Segment Tree</a></li>
 			<li><a href="https://vjudge.net/contest/239407">Day 2: Extended Segment Tree</a></li>
-			<li><a href="days/day3">Day 3: Dynamic Programming</a></li>
+			<li><a href="https://vjudge.net/contest/239606">Day 3: Dynamic Programming</a></li>
 		</ul>
 <a href="" onmouseover="document.bgColor='turquoise'">C</a>
 <a href="" onmouseover="document.bgColor='pink'">h</a>
