--- a/mc/camp/index.html
+++ b/mc/camp/index.html
@@ -11,6 +11,7 @@
 			<li><a href="https://vjudge.net/contest/239361">Day 1: Simple Segment Tree</a></li>
 			<li><a href="https://vjudge.net/contest/239407">Day 2: Extended Segment Tree</a></li>
 			<li><a href="https://vjudge.net/contest/239606">Day 3: Dynamic Programming</a></li>
+			<li><a href="https://vjudge.net/contest/239903">Day 4: Geometry</a></li>
 		</ul>
 <a href="" onmouseover="document.bgColor='turquoise'">C</a>
 <a href="" onmouseover="document.bgColor='pink'">h</a>
