--- a/mc/camp/index.html
+++ b/mc/camp/index.html
@@ -13,6 +13,7 @@
 			<li><a href="https://vjudge.net/contest/239606">Day 3: Dynamic Programming</a></li>
 			<li><a href="https://vjudge.net/contest/239903">Day 4: Geometry</a></li>
 		</ul>
+
 <a href="" onmouseover="document.bgColor='turquoise'">C</a>
 <a href="" onmouseover="document.bgColor='pink'">h</a>
 <a href="" onmouseover="document.bgColor='blue'">o</a>
@@ -35,6 +36,9 @@
 <a href="" onmouseover="document.bgColor='teal'">d</a>
 <a href="" onmouseover="document.bgColor='black'">color!</a>
 
+		<ul>
+			<li><b><a href="geom.html">Geometry</a></b></li>
+		</ul>
 	</div>
 </body>
 </html>
