--- a/mc/camp/geom.html
+++ b/mc/camp/geom.html
@@ -13,5 +13,10 @@
 	    y = y - b * k;<br>
 	</div>
 
+	<div>
+		<h1>Площадь многоугольника</h1>
+	    S = |sum(x[i] - x[i + 1]) * sum(y[i] + y[i + 1])| / 2<br>
+	</div>
+
 </body>
 </html>
