--- a/mc/camp/index.html
+++ b/mc/camp/index.html
@@ -13,6 +13,7 @@
 			<li><a href="https://vjudge.net/contest/239606">Day 3: Dynamic Programming</a></li>
 			<li><a href="https://vjudge.net/contest/239903">Day 4: Geometry</a></li>
 			<li><a href="https://vjudge.net/contest/240362">Day 6: Dynamic Programming: on subsets, on segments, on subtree</a></li>
+			<li><a href="https://vjudge.net/contest/240901">Day 7: Strings</a></li>
 		</ul>
 
 <a href="" onmouseover="document.bgColor='turquoise'">C</a>
