--- a/mc/camp/index.html
+++ b/mc/camp/index.html
@@ -40,6 +40,7 @@
 
 		<ul>
 			<li><b><a href="geom.html">Geometry</a></b></li>
+			<li><b><a href="strings.html">Strings</a></b></li>
 		</ul>
 	</div>
 </body>
