--- a/mc/camp/strings.html
+++ b/mc/camp/strings.html
@@ -13,29 +13,6 @@
 </head>
 <body>
 	Manacher:
-	<pre>
-		<code class="cpp">
-	int l = 0, r = -1;
-	for(int i = 0; i < (int)(s.size()); i++){
-		int k = (i > r ? 0 : min(d[l + r - i], r - i)) + 1;
-		while(i + k < (int)(s.size()) && i - k >= 0 && s[i + k] == s[i - k]) ++k;
-		d[i] = --k;
-		if(i + k > r){
-			l = i - k;
-			r = i + k;
-		}
-	} 	
-	l = 0, r = -1;
-	for(int i = 0; i < (int)(s.size()); i++){
-		int k =  (i > r ? 0 : min(d1[l + r - i + 1], r - i + 1)) + 1;
-		while(i + k - 1 < (int)(s.size()) && i - k >= 0 && s[i + k - 1] == s[i - k]) ++k;
-		d1[i] = --k;
-		if(i + k - 1 > r){
-			l = i - k;
-			r = i + k - 1;
-		}			
-	}
-			</code>
-	</pre>
+	<img src="./saved.png" alt="Manacher">
 </body>
 </html>
