--- a/mc/camp/strings.html
+++ b/mc/camp/strings.html
@@ -12,7 +12,15 @@
 
 </head>
 <body>
-	Manacher:
-	<img src="./saved.png" alt="Manacher">
+	<div style="
+		display: flex;
+		flex-direction: column;
+	">
+		Manacher:
+		<img src="./saved.png" alt="Manacher">
+
+		Hashing:
+		<img src="./hashing.png" alt="Hashing">
+	</div>
 </body>
 </html>
