--- a/mc/camp/index.html
+++ b/mc/camp/index.html
@@ -42,6 +42,10 @@
 			<li><b><a href="geom.html">Geometry</a></b></li>
 			<li><b><a href="strings.html">Strings</a></b></li>
 		</ul>
+
+		<p style="font-size: 64px">
+			<a href="https://docs.google.com/forms/d/e/1FAIpQLSe_at2LtGHcq5lud0_EFvVxJAtms0beGHl_FrP3qOKUl7aZdw/viewform">Опрос</a>
+		</p>
 	</div>
 </body>
 </html>
