--- a/mc/camp/index.html
+++ b/mc/camp/index.html
@@ -15,7 +15,15 @@
 			<li><a href="https://vjudge.net/contest/240362">Day 6: Dynamic Programming: on subsets, on segments, on subtree</a></li>
 			<li><a href="https://vjudge.net/contest/240901">Day 7: Strings</a></li>
 			<li><a href="https://vjudge.net/contest/241334">Day 8: Greedy</a></li>
+			<li><a href="https://vjudge.net/contest/241630">Day 9: Convex hull + Scanline</a></li>
 		</ul>
+
+		<pre>
+		<ul>
+			<li><a href="https://vjudge.net/contest/241631">Level 1, Day 9: Backtracking</a></li>
+		</ul>
+		</pre>
+
 <a href="" onmouseover="document.bgColor='turquoise'">C</a>
 <a href="" onmouseover="document.bgColor='pink'">h</a>
 <a href="" onmouseover="document.bgColor='blue'">o</a>
