--- a/mc/camp/index.html
+++ b/mc/camp/index.html
@@ -54,6 +54,12 @@
 		<p style="font-size: 64px">
 			<a href="https://docs.google.com/forms/d/e/1FAIpQLSe_at2LtGHcq5lud0_EFvVxJAtms0beGHl_FrP3qOKUl7aZdw/viewform">Опрос</a>
 		</p>
+
+		<p style="font-size: 64px">
+			<a href="spec_course/index.html">
+				TicTacToe Game
+			</a>
+		</p>
 	</div>
 </body>
 </html>
