--- a/mc/camp/index.html
+++ b/mc/camp/index.html
@@ -49,6 +49,7 @@
 		<ul>
 			<li><b><a href="geom.html">Geometry</a></b></li>
 			<li><b><a href="strings.html">Strings</a></b></li>
+            <li><b><a href="ch_sl.html">Convex hull & Scanline</a></b></li>
 		</ul>
 
 		<p style="font-size: 64px">
