--- a/mc/camp/index.html
+++ b/mc/camp/index.html
@@ -16,8 +16,9 @@
 			<li><a href="https://vjudge.net/contest/240901">Day 7: Strings</a></li>
 			<li><a href="https://vjudge.net/contest/241334">Day 8: Greedy</a></li>
 			<li><a href="https://vjudge.net/contest/241630">Day 9: Convex hull + Scanline</a></li>
-			<li><a href="https://vjudge.net/contest/241924">Day 10: Shortest paths and similar</a></li>
 			<li><a href="https://vjudge.net/contest/241999">Day 10: Level 2.5</a></li>
+			<li><a href="https://vjudge.net/contest/241924">Day 10: Shortest paths and similar</a></li>
+			<li><a href="https://vjudge.net/contest/242298">Day 11: Euler paths, bridges, cutpoints, DSU, MST </a></li>
 		</ul>
 
 		<pre>
