--- a/index.html
+++ b/index.html
@@ -11,15 +11,23 @@
 	  gtag('config', 'UA-81313215-2');
 	</script>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Aisultan Kali</title>
 	<link rel="stylesheet" href="stylesheets/stylesheet.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
-	<div class="container">
-		<div class="grad">
-			<a href="http://t.me/dots256">Aisultan Kali</a>
+	<div class="center">
+		<div class="container">
+			<span class="name"><a href="http://t.me/dots256" class="grad">Aisultan Kali</a></span>
+			<p>Junior dev from Almaty, Kazakhstan</p>
+			<div class="network">
+				<a href="http://t.me/dots256"><i class="fab fa-telegram"></i></a>
+				<a href="http://vk.com/chromecr"><i class="fab fa-vk"></i></a>
+				<a href="http://instagram.com/aisultankali"><i class="fab fa-instagram"></i></a>
+				<a href="http://github.com/akali"><i class="fab fa-github"></i></a>
+			</div>
 		</div>
-		<a href="mc/camp">Math&Code Camp</a>
 	</div>
 </body>
 </html>
