--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<span class="name"><a href="http://t.me/dots256" class="grad">Aisultan Kali</a></span>
 			<p>Junior dev from Almaty, Kazakhstan</p>
 			<div class="network">
-				<a href="http://t.me/dots256"><i class="fab fa-telegram"></i></a>
+				<a href="http://t.me/dots256"><i class="fab fa-telegram linear-wipe"></i></a>
 				<a href="http://vk.com/chromecr"><i class="fab fa-vk"></i></a>
 				<a href="http://instagram.com/aisultankali"><i class="fab fa-instagram"></i></a>
 				<a href="http://github.com/akali"><i class="fab fa-github"></i></a>
