--- a/index.html
+++ b/index.html
@@ -19,14 +19,18 @@
 <body>
 	<div class="center">
 		<div class="container">
-			<span class="name"><a href="http://t.me/dots256" class="grad">Aisultan Kali</a></span>
-			<p>Junior dev from Almaty, Kazakhstan</p>
-			<div class="network">
-				<a href="http://t.me/dots256"><i class="fab fa-telegram linear-wipe"></i></a>
-				<a href="http://vk.com/chromecr"><i class="fab fa-vk"></i></a>
-				<a href="http://instagram.com/aisultankali"><i class="fab fa-instagram"></i></a>
-				<a href="http://github.com/akali"><i class="fab fa-github"></i></a>
-			</div>
+			<span class="name"><a href="http://akali.github.io" class="grad">Aisultan Kali</a></span>
+			<p class="title">Junior dev from Almaty, Kazakhstan</p>
+		</div>
+	</div>
+	<div class="bottom">
+		<div class="network">
+			<a href="http://t.me/dots256"><i class="fab fa-telegram linear-wipe"></i></a>
+			<a href="http://vk.com/chromecr"><i class="fab fa-vk"></i></a>
+			<a href="http://instagram.com/aisultankali"><i class="fab fa-instagram"></i></a>
+			<a href="http://github.com/akali"><i class="fab fa-github"></i></a>
+			<a href="cv/CV.pdf"><i class="far fa-file"></i></a>
+			<a href="mailto:aiusltan.kali@gmail.com"><i class="far fa-envelope"></i></a>
 		</div>
 	</div>
 </body>
