--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 	</script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Aisultan Kali</title>
+	<title>Nurymzhan Ayapbergen</title>
 	<link rel="stylesheet" href="stylesheets/stylesheet.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
 	<div class="center">
 		<div class="container">
-			<span class="name"><a href="http://akali.github.io" class="grad">Aisultan Kali</a></span>
+			<span class="name"><a href="http://nur99.github.io" class="grad">Nurymzhan Ayapbergen</a></span>
 			<p class="title">Junior dev from Almaty, Kazakhstan</p>
 		</div>
 	</div>
